// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils/api should execute a GET successfully with json 1`] = `
Object {
  "hello": "world",
}
`;

exports[`utils/api should execute a POST successfully 1`] = `"ok"`;

exports[`utils/api should reject for a not found error 1`] = `
Object {
  "error": true,
  "message": null,
  "status": 0,
}
`;

exports[`utils/api should reject for a server error with JSON response 1`] = `
Object {
  "error": true,
  "message": null,
  "status": 0,
}
`;

exports[`utils/api should reject for a server error with no response 1`] = `
Object {
  "error": true,
  "status": 0,
}
`;
